--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.0",
     "axios": "^1.7.7",
     "dompurify": "^3.1.6",
     "leaflet": "^1.9.4",
