--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,12 +13,13 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.19.0",
+    "api": "file:",
     "bcrypt": "^5.1.1",
     "cookie": "^0.6.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
     "nodemon": "^3.1.4",
