--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^6.1.0",
     "axios": "^1.7.7",
     "dompurify": "^3.1.6",
+    "estateui": "file:",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
